Horizontal scroll issue

--- a/style/css/main.css
+++ b/style/css/main.css
@@ -149,7 +149,8 @@ body {
 
 .container {
   margin: 0 15%;
-  max-width: 1920px; }
+  max-width: 1920px;
+  overflow-x: inherit; }
 
 .u-uppercase {
   text-transform: uppercase; }
