--- a/style/sass/base/_base.scss
+++ b/style/sass/base/_base.scss
@@ -26,4 +26,5 @@ body {
 .container {
     margin: 0 15%;
     max-width: 1920px;
+    overflow-x: inherit;
 }
